# p2cg

./: CMakeLists.txt  data5.rgb  functions.cpp  functions.h  luz.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  osgview.cpp  paleta.cfg  ui_mainwindow.h  ui_mainwindow.h.new
Luz/: luz.h
TrainSet/Pulverizador/: vista1.pcd  vista1.vfh  vista2.pcd  vista2.vfh  vista3.pcd  vista3.vfh
TrainSet/Vaso/: vista1.pcd  vista1.vfh  vista2.pcd  vista2.vfh  vista3.pcd  vista3.vfh  vista4.pcd  vista4.vfh  vista5.pcd  vista5.vfh  vista6.pcd  vista6.vfh
TrainSet/pala/: vista1.pcd  vista1.vfh  vista2.pcd  vista2.vfh  vista3.pcd  vista3.vfh  vista4.pcd  vista4.vfh
TrainSet/sombrero/: vista1.pcd  vista1.vfh  vista2.pcd  vista2.vfh  vista3.pcd  vista3.vfh  vista4.pcd  vista4.vfh  vista5.pcd  vista5.vfh  vista6.pcd  vista6.vfh
clouds/: data1.rgb  data1_Vaso.depth  data1_pala.depth  data1_pala.rgb  data2.depth  data2.rgb  data3.depth  data3.rgb  data4.rgb  data5.depth
clouds/oldClouds/: data1.depth  data4.depth
computepointcloud/: computepointcloud.cpp  computepointcloud.h
descriptors/: descriptors.cpp  descriptors.h
osgWay/: osgWay.cpp  osgWay.h
processfunction/: processfunction.cpp  processfunction.h
prueba/: CMakeLists.txt  main.cpp
types/: types.h
viewer/: viewer.cpp  viewer.h
